:clipboard: Install umm
* `@umm/commandline_arguments` をインストールします
  * 開発ビルドかどうか？を拾うため。

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "scripts"
   ],
   "dependencies": {
+    "@umm/commandline_arguments": "^1.0.0",
     "glob": "^7.1.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
