--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "url": "https://github.com/umm-projects/simple_build/issues"
   },
   "scripts": {
-    "umm:init": "./node_modules/.bin/umm-init",
-    "umm:install": "./node_modules/.bin/umm-install",
-    "umm:uninstall": "./node_modules/.bin/umm-uninstall",
-    "postinstall": "npm run --silent umm:install",
-    "postuninstall": "npm run --silent umm:uninstall",
-    "build:test": "tar -tf $(npm pack -s) && $(npm bin)/rimraf $_"
+    "umm:init": "umm-init",
+    "umm:module:install": "umm-module-install",
+    "umm:module:uninstall": "umm-module-uninstall",
+    "postinstall": "npm run --silent umm:module:install",
+    "postuninstall": "npm run --silent umm:module:uninstall"
   },
   "author": {
     "name": "Tetsuya Mori",
