:clipboard: Split AssemblyDefinition

--- a/Assets/Tests/EditMode/AssemblyDefinition.asmdef
+++ b/Assets/Tests/EditMode/AssemblyDefinition.asmdef
@@ -1,7 +1,8 @@
 {
-    "name": "Tests.EditMode",
+    "name": "umm@simple_build-Tests-EditMode",
     "references": [
-        "umm@simple_build"
+        "umm@simple_build",
+        "umm@simple_build-Editor"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
