--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /[Bb]uild/
 /[Ll]ogs/
 /UnityGenerated/
+/UserSettings/
 # Library should not freeze version, it should be written in README.
 /ProjectSettings/ProjectVersion.txt
 
